# hg-control-console

./: .gitignore  Makefile  README.md  pyproject.toml  simkeys_linux_client.sh
data/characters.d/: 15-public-hell-bosses.xml  60-private-hellbosses.xml  60-private-limbo-p0.xml  60-private-limbo-p1.xml  60-private-limbo-p2.xml  60-private-limbo-p3.xml  80-LimboRawCurrent.xml
data/followcues.d/: default.xml
data/statusrules.d/: statusrules.xml
docs/reverse-engineering/: linux-client-169.md
src/native/SimKeysHook2/SimKeysHook2/: SimKeysHook.cpp
src/native/SimKeysHookLinux/: README.md  SimKeysHookLinux.cpp  build.ps1  build.sh
src/simkeys_app/: launch_linux_client.py  simKeys_Client.py  simkeys_control.py  simkeys_damage_meter.py  simkeys_gui.py  simkeys_hgx_data.py  simkeys_runtime.py  simkeys_script_host.py
tests/: test_auto_action_combat.py  test_chat_events.py  test_damage_meter.py  test_gui_saved_scripts.py  test_simkeys_client_text_codec.py
tools/: match_linux_client.py  setup_linux_test_env.ps1
